# agentic-node-ops

./: .dockerignore  .gitignore  Dockerfile  README.md  discord.py  dispatcher.py  docker-compose.yml  ntfy.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: python-package.yml
docs/: alert-set.md  alertmanager-hermes-routing.yml  architecture.md  functional-testing-runbook.md  hermes-agent-design-final.md  hermes-agent-design-v2.md  hermes-agent-design-v3.md  hermes-agent-design.md  hermes-implementation-plan.md  index.md  memory-and-feedback.md  notification-design.md  prometheus-alerts.yml  runbook-spec.md  runbook-synthesis.md  slashing-protocol.md  webhook-receiver-spec.md
monitoring/rules/: hermes.yml
runbooks/: README.md  client_crash.yaml  consensus_desync.yaml  validator_duty_misses.yaml
src/agentic_node_ops/: __init__.py  approval.py  baselines.py  context.py  database.py  discord.py  dispatcher.py  executor.py  ntfy.py  processor.py  runbooks.py  types.py
tests/: test_approval.py  test_baselines.py  test_context.py  test_database.py  test_executor.py  test_notifications.py  test_processor.py  test_runbooks.py
webhook-receiver/: .gitkeep  nginx-docker-filter.conf  pyproject.toml
webhook-receiver/src/webhook_receiver/: __init__.py  context_fetcher.py  dedup.py  schema.py  server.py  storm_protection.py  types.py
webhook-receiver/tests/: test_context_fetcher.py  test_dedup.py  test_schema.py  test_server.py  test_storm_protection.py
