[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-node-ops"
version = "0.1.0"
description = "Ethereum validator node monitoring powered by Hermes Agent"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests", "webhook-receiver/tests"]
asyncio_mode = "auto"
pythonpath = ["src", "webhook-receiver/src"]

[tool.setuptools.packages.find]
where = ["src"]
